--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -265,10 +265,11 @@
   publisher={ACM}
 }
 
-@misc{aydemir2017towards,
+@inproceedings{aydemir2017towards,
   title={Towards Aligning Multi-Concern Models via NLP},
   author={Aydemir, Fatma Ba\c sak and Dalpiaz, Fabiano},
-  year={2017}
+  year={2017},
+  booktitle={Proceedings of the 7th International Workshop on Model-Driven Requirements Engineering (MoDRE)}
 }
 
 @online{princeton2010wordnet,
@@ -329,6 +330,17 @@
   year={2009},
   publisher={Elsevier}
 }
+
+@article{sedgwick2012pearson,
+  title={Pearson's correlation coefficient},
+  author={Sedgwick, Philip and others},
+  journal={Bmj},
+  volume={345},
+  number={7},
+  year={2012},
+  publisher={British Medical Journal Publishing Group}
+}
+
 
 ###########################
 ## Probably not relevant ##
